# IntyerviewBit

./: .gitignore  README.md  cloudbuild.yaml  diff.txt
interviewace/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  key_test_out.txt  list_models.py  pyproject.toml  pytest.ini  requirements.txt  start.ps1  test_adk_events.py  test_bidi.py  test_client.py  test_interviewace.py  test_key.py
interviewace/Microsoft/Windows/PowerShell/: ModuleAnalysisCache
interviewace/app/: main.py  runtime_config.py  ws_manager.py
interviewace/app/interview_coach_agent/: __init__.py  agent.py  grounding_data.py  prompts.py  tools.py
interviewace/app/static/: index.html
interviewace/app/static/css/: style.css
interviewace/app/static/js/: app.js  audio-player.js  audio-recorder.js  camera.js  dashboard.js  pcm-player-processor.js  pcm-recorder-processor.js
interviewace/deploy/: Dockerfile  deploy.sh
interviewace/deploy/terraform/: main.tf  variables.tf
